--- a/preamble.tex
+++ b/preamble.tex
@@ -13,6 +13,7 @@
 \usepackage{mathrsfs}
 \usepackage[mathcal]{euscript}
 \usepackage{mathtools}
+\usepackage{wasysym}
 
 %clever ref package 
 %must come before following 3 sections
@@ -113,6 +114,7 @@
 \newcommand{\crit}{\operatorname{crit}}
 \newcommand{\orep}{\mathbb{O}}
 \newcommand{\witt}{\mathfrak{W}}
+\newcommand{\graph}{\mathfrak{S}}
 
 
 %sets
