Changes in preamble

--- a/preamble.tex
+++ b/preamble.tex
@@ -114,7 +114,7 @@
 \newcommand{\crit}{\operatorname{crit}}
 \newcommand{\orep}{\mathbb{O}}
 \newcommand{\witt}{\mathfrak{W}}
-\newcommand{\graph}{\mathfrak{S}}
+\newcommand{\graph}{\mathcal{S}}
 
 
 %sets
